# metalcraft-agent-gateway

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: auth.rs  lib.rs  main.rs  routes.rs  webhooks.rs
src/platform/: mod.rs  whatsapp.rs
